7Kubernetes/10ingress/app1/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels: #These labels are deployment set labels.Every k8s resources have labels
    app: app1
spec:
  # modify replicas according to your case
  replicas: 2
  selector: #selector should match with template. The selector should match with pod labels
    matchLabels:
      app: app1
  template: #Template is pod labels   
    metadata:
      labels:
        app: app1
    spec:
      containers: 
      - name: app1
        image: cryl91/app1
        ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80 #This port number belongs to service
    targetPort: 80 #This port number belongs to container
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app1
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/tags: Environment=dev,Project=roboshop
        alb.ingress.kubernetes.io/group.name: joindevops #If you give the group name then all the applications will attach to the same load balancer. If not it will create multiple load balancers 
spec:
  ingressClassName: alb
  rules:
  - host: "app1.joindevops.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1
            port:
              number: 80
